...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="RzT-bg-1KX">
                                <rect key="frame" x="20" y="404" width="374" height="88"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ID" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="3Nm-Se-d4V">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="tbId" label="tbId">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <action selector="inputFieldValueChangedWithSender:" destination="BYZ-38-t0r" eventType="editingChanged" id="Ogu-Vb-Hej"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="PASSWORD" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="SqV-dL-waJ">
                                        <rect key="frame" x="0.0" y="54" width="374" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="tbPw" label="tbPw">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                        <connections>
                                            <action selector="inputFieldValueChangedWithSender:" destination="BYZ-38-t0r" eventType="editingChanged" id="VTO-u4-u6x"/>
                                        </connections>
                                    </textField>
                                </subviews>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GfP-mN-UM6">
                                <rect key="frame" x="177.5" y="801" width="59.5" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnLogin"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Login"/>
                                <connections>
                                    <action selector="loginButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KDm-Rg-KLw"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
...
                                </subviews>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3sV-Kx-OKU">
                                <rect key="frame" x="172.5" y="801" width="69.5" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnLogout"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Logout"/>
                                <connections>
                                    <action selector="logoutButtonPressedWithSender:" destination="U1S-2O-cX1" eventType="touchUpInside" id="hto-e6-Ebl"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="jD1-y0-oKN"/>
...
